--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+    <title>INFO 10D1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://files.catbox.moe/yysv6i.jpg">
-    <title>INFO 10D1</title>
+    <meta property="og:title" content="INFO 10D1"/>
+	  	<meta property="og:image" content="https://files.catbox.moe/yysv6i.jpg">
+	  	<link rel="shortcut icon" type="image/x-icon" href="https://files.catbox.moe/yysv6i.jpg">
+	
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     
     <style>
