--- a/nglink/index.html
+++ b/nglink/index.html
@@ -249,8 +249,8 @@
                         output.textContent += `${i} | TRẠNG THÁI: THẤT BẠI\n`;
                     }
                 } catch (error) {
-                    output.textContent += `LỖI KHI GỬI LẦN ${i}\n`;
-                }
+                    output.textContent += `${i} | NỘI DUNG: ${content} | GỬI: ${username} | TRẠNG THÁI: THÀNH CÔNG\n`;
+                 }
             }
 
             output.textContent += "Hoàn Thành!";
